--- a/_config.yml
+++ b/_config.yml
@@ -9,24 +9,24 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://zones.arilyn.cc
-timezone:
+timezone: Pacific/Auckland
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Technical Documentation # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Mostly homelab docs # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Home lab and network docuemntation.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://hoze99/hoze99.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: hoze99 # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
@@ -34,12 +34,12 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: John McKnight
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://github.com/hoze99 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://scontent.fakl2-1.fna.fbcdn.net/v/t39.30808-1/458614146_8530336503671871_958642631463856125_n.jpg?stp=c13.13.167.167a_dst-jpg_s166x166_tt6&_nc_cat=106&ccb=1-7&_nc_sid=e99d92&_nc_ohc=XJUaEmzwc64Q7kNvwFLplyX&_nc_oc=AdmIkIQMCWofgXWAtoZxDLiPEle-vWLETaU1Nkrscn-2EntLS91UQ44FfjJEEYelw7U&_nc_zt=24&_nc_ht=scontent.fakl2-1.fna&_nc_gid=LOQKrWWw2aNIQ4SJbLIhzQ&oh=00_AfleyL45MKyxMq4U-fFgEZDKta5vIMuqkgp1WJr18tYv0A&oe=695530AD
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
