--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Pacific/Auckland
 
 title: Technical Documentation # the main title
 
-tagline: Mostly homelab docs # it will display as the subtitle
+tagline: Mostly homelab recipes # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Home lab and network docuemntation.
+  Home lab and network documentation.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
